--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "telegraf": "^4.16.3",
-    "@anthropic-ai/sdk": "^0.39.0"
+    "socket.io-client": "^4.7.5"
   },
   "engines": {
     "node": ">=18.0.0"
