--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dev": "node --watch bot.js"
   },
   "dependencies": {
+    "dotenv": "^16.1.4",
     "telegraf": "^4.16.3",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "node-fetch": "^3.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
