--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pumpfun-scanner-bot",
   "version": "1.0.0",
-  "description": "pump.fun Telegram scanner bot with paper trading",
+  "description": "Pump.fun Telegram scanner bot with paper trading and whale detection",
   "type": "module",
   "main": "bot.js",
   "scripts": {
@@ -9,10 +9,9 @@
     "dev": "node --watch bot.js"
   },
   "dependencies": {
-    "dotenv": "^16.1.4",
     "telegraf": "^4.16.3",
     "ws": "^8.18.0",
-    "node-fetch": "^3.3.2"
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
